--- a/Commander/Commander.csproj
+++ b/Commander/Commander.csproj
@@ -57,6 +57,12 @@
     <Compile Include="CommanderForm.Designer.cs">
       <DependentUpon>CommanderForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="EditableLabel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="EditableLabel.Designer.cs">
+      <DependentUpon>EditableLabel.cs</DependentUpon>
+    </Compile>
     <Compile Include="ShellContextMenu.cs" />
     <Compile Include="ContextMenuHelper.cs" />
     <Compile Include="FileView.cs">
@@ -70,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CommanderForm.resx">
       <DependentUpon>CommanderForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditableLabel.resx">
+      <DependentUpon>EditableLabel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FileView.resx">
       <DependentUpon>FileView.cs</DependentUpon>
