--- a/Commander/app.config
+++ b/Commander/app.config
@@ -1,29 +1,29 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
-<configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-        <section name="Commander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-</configSections>
-<startup><supportedRuntime version="v2.0.50727" sku="Client"/></startup>
-    <userSettings>
-        <Commander.Properties.Settings>
-            <setting name="Size" serializeAs="String">
-                <value>874, 515</value>
-            </setting>
-            <setting name="CommandButtons" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="LeftPath" serializeAs="String">
-                <value>C:\</value>
-            </setting>
-            <setting name="RightPath" serializeAs="String">
-                <value>D:\</value>
-            </setting>
-            <setting name="CmdLines" serializeAs="String">
-                <value>
-                </value>
-            </setting>
-        </Commander.Properties.Settings>
-    </userSettings>
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="Commander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+		</sectionGroup>
+	</configSections>
+	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+	<userSettings>
+		<Commander.Properties.Settings>
+			<setting name="Size" serializeAs="String">
+				<value>874, 515</value>
+			</setting>
+			<setting name="CommandButtons" serializeAs="String">
+				<value/>
+			</setting>
+			<setting name="LeftPath" serializeAs="String">
+				<value>C:\</value>
+			</setting>
+			<setting name="RightPath" serializeAs="String">
+				<value>D:\</value>
+			</setting>
+			<setting name="CmdLines" serializeAs="String">
+				<value>
+				</value>
+			</setting>
+		</Commander.Properties.Settings>
+	</userSettings>
 </configuration>
