--- a/TestForm/TestForm.csproj
+++ b/TestForm/TestForm.csproj
@@ -71,6 +71,12 @@
   <ItemGroup>
     <Compile Include="ArchivedDirectoryNode.cs" />
     <Compile Include="ArchivedFileNode.cs" />
+    <Compile Include="FileListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="FileListView.Designer.cs">
+      <DependentUpon>FileListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="DirectoryNode.cs" />
     <Compile Include="FileListViewBase.cs">
       <SubType>Component</SubType>
@@ -88,6 +94,7 @@
     </Compile>
     <Compile Include="IExecutive.cs" />
     <Compile Include="MessageDispatcher.cs" />
+    <Compile Include="Messages\DirectorySelectedAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FileListViewBase.resx">
@@ -167,6 +174,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
