--- a/TestForm/TestForm.csproj
+++ b/TestForm/TestForm.csproj
@@ -91,7 +91,7 @@
     <Compile Include="ArchiveNode.cs" />
     <Compile Include="ArchiveUpLink.cs" />
     <Compile Include="RarArchiveNode.cs" />
-    <Compile Include="Shell\ShellGuids.cs" />
+    <Compile Include="ShellDll\ShellGuids.cs" />
     <Compile Include="Zip7ArchiveNode.cs" />
     <Compile Include="ButtonCommandBar.cs">
       <SubType>UserControl</SubType>
@@ -244,33 +244,33 @@
     </Compile>
     <Compile Include="SafeNativeMethods.cs" />
     <Compile Include="ShellContextMenu.cs" />
-    <Compile Include="Shell\FileSystemWatcher.cs" />
-    <Compile Include="Shell\Interfaces\IAdviseSink.cs" />
-    <Compile Include="Shell\Interfaces\IContextMenu.cs" />
-    <Compile Include="Shell\Interfaces\IDataObject.cs" />
-    <Compile Include="Shell\Interfaces\IDragSourceHelper.cs" />
-    <Compile Include="Shell\Interfaces\IDropSource.cs" />
-    <Compile Include="Shell\Interfaces\IDropTarget.cs" />
-    <Compile Include="Shell\Interfaces\IDropTargetHelper.cs" />
-    <Compile Include="Shell\Interfaces\IEnumFORMATETC.cs" />
-    <Compile Include="Shell\Interfaces\IEnumIDList.cs" />
-    <Compile Include="Shell\Interfaces\IEnumSTATSTG.cs" />
-    <Compile Include="Shell\Interfaces\IQueryInfo.cs" />
-    <Compile Include="Shell\Interfaces\IShellExtInit.cs" />
-    <Compile Include="Shell\Interfaces\IShellFolder.cs" />
-    <Compile Include="Shell\Interfaces\IStorage.cs" />
-    <Compile Include="Shell\Interfaces\IStream.cs" />
-    <Compile Include="Shell\PIDL.cs" />
-    <Compile Include="Shell\ShellAPI.cs" />
-    <Compile Include="Shell\ShellBrowser.cs">
+    <Compile Include="ShellDll\FileSystemWatcher.cs" />
+    <Compile Include="ShellDll\Interfaces\IAdviseSink.cs" />
+    <Compile Include="ShellDll\Interfaces\IContextMenu.cs" />
+    <Compile Include="ShellDll\Interfaces\IDataObject.cs" />
+    <Compile Include="ShellDll\Interfaces\IDragSourceHelper.cs" />
+    <Compile Include="ShellDll\Interfaces\IDropSource.cs" />
+    <Compile Include="ShellDll\Interfaces\IDropTarget.cs" />
+    <Compile Include="ShellDll\Interfaces\IDropTargetHelper.cs" />
+    <Compile Include="ShellDll\Interfaces\IEnumFORMATETC.cs" />
+    <Compile Include="ShellDll\Interfaces\IEnumIDList.cs" />
+    <Compile Include="ShellDll\Interfaces\IEnumSTATSTG.cs" />
+    <Compile Include="ShellDll\Interfaces\IQueryInfo.cs" />
+    <Compile Include="ShellDll\Interfaces\IShellExtInit.cs" />
+    <Compile Include="ShellDll\Interfaces\IShellFolder.cs" />
+    <Compile Include="ShellDll\Interfaces\IStorage.cs" />
+    <Compile Include="ShellDll\Interfaces\IStream.cs" />
+    <Compile Include="ShellDll\PIDL.cs" />
+    <Compile Include="ShellDll\ShellAPI.cs" />
+    <Compile Include="ShellDll\ShellBrowser.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Shell\ShellBrowserUpdater.cs" />
-    <Compile Include="Shell\ShellFolderHelper.cs" />
-    <Compile Include="Shell\ShellHelper.cs" />
-    <Compile Include="Shell\ShellImageList.cs" />
-    <Compile Include="Shell\ShellItem.cs" />
-    <Compile Include="Shell\SpecialFolders.cs" />
+    <Compile Include="ShellDll\ShellBrowserUpdater.cs" />
+    <Compile Include="ShellDll\ShellFolderHelper.cs" />
+    <Compile Include="ShellDll\ShellHelper.cs" />
+    <Compile Include="ShellDll\ShellImageList.cs" />
+    <Compile Include="ShellDll\ShellItem.cs" />
+    <Compile Include="ShellDll\SpecialFolders.cs" />
     <Compile Include="ThumbnailCreator.cs" />
     <Compile Include="UpLink.cs" />
     <Compile Include="Utility\ContextMenuHelper.cs" />
