--- a/TestForm/TestForm.csproj
+++ b/TestForm/TestForm.csproj
@@ -92,6 +92,14 @@
     <Compile Include="ArchiveUpLink.cs" />
     <Compile Include="RarArchiveNode.cs" />
     <Compile Include="ShellDll\ShellGuids.cs" />
+    <Compile Include="Shell\IShellFolder.cs" />
+    <Compile Include="Shell\IShellItem.cs" />
+    <Compile Include="Shell\NativeMethods.cs" />
+    <Compile Include="Shell\Pidl.cs" />
+    <Compile Include="Shell\ShellFile.cs" />
+    <Compile Include="Shell\ShellFolder.cs" />
+    <Compile Include="Shell\ShellGuids.cs" />
+    <Compile Include="Shell\ShellItem.cs" />
     <Compile Include="Zip7ArchiveNode.cs" />
     <Compile Include="ButtonCommandBar.cs">
       <SubType>UserControl</SubType>
