--- a/TestForm/TestForm.csproj
+++ b/TestForm/TestForm.csproj
@@ -91,19 +91,15 @@
     <Compile Include="ArchiveNode.cs" />
     <Compile Include="ArchiveUpLink.cs" />
     <Compile Include="RarArchiveNode.cs" />
-    <Compile Include="ShellDirectoryNode.cs" />
-    <Compile Include="ShellFileNode.cs" />
-    <Compile Include="Shell\IContextMenu.cs" />
+    <Compile Include="ShellDll\ShellGuids.cs" />
     <Compile Include="Shell\IEnumIDList.cs" />
     <Compile Include="Shell\IShellFolder.cs" />
     <Compile Include="Shell\IShellItem.cs" />
     <Compile Include="Shell\NativeMethods.cs" />
     <Compile Include="Shell\Pidl.cs" />
-    <Compile Include="Shell\ShellBrowserUpdater.cs" />
     <Compile Include="Shell\ShellFile.cs" />
     <Compile Include="Shell\ShellFolder.cs" />
     <Compile Include="Shell\ShellGuids.cs" />
-    <Compile Include="Shell\ShellHelper.cs" />
     <Compile Include="Shell\ShellItem.cs" />
     <Compile Include="Zip7ArchiveNode.cs" />
     <Compile Include="ButtonCommandBar.cs">
@@ -257,6 +253,34 @@
     </Compile>
     <Compile Include="SafeNativeMethods.cs" />
     <Compile Include="ShellContextMenu.cs" />
+    <Compile Include="ShellDll\FileSystemWatcher.cs" />
+    <Compile Include="ShellDll\Interfaces\IAdviseSink.cs" />
+    <Compile Include="ShellDll\Interfaces\IContextMenu.cs" />
+    <Compile Include="ShellDll\Interfaces\IDataObject.cs" />
+    <Compile Include="ShellDll\Interfaces\IDragSourceHelper.cs" />
+    <Compile Include="ShellDll\Interfaces\IDropSource.cs" />
+    <Compile Include="ShellDll\Interfaces\IDropTarget.cs" />
+    <Compile Include="ShellDll\Interfaces\IDropTargetHelper.cs" />
+    <Compile Include="ShellDll\Interfaces\IEnumFORMATETC.cs" />
+    <Compile Include="ShellDll\Interfaces\IEnumIDList.cs" />
+    <Compile Include="ShellDll\Interfaces\IEnumSTATSTG.cs" />
+    <Compile Include="ShellDll\Interfaces\IQueryInfo.cs" />
+    <Compile Include="ShellDll\Interfaces\IShellExtInit.cs" />
+    <Compile Include="ShellDll\Interfaces\IShellFolder.cs" />
+    <Compile Include="ShellDll\Interfaces\IStorage.cs" />
+    <Compile Include="ShellDll\Interfaces\IStream.cs" />
+    <Compile Include="ShellDll\PIDL.cs" />
+    <Compile Include="ShellDll\ShellAPI.cs" />
+    <Compile Include="ShellDll\ShellBrowser.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ShellDll\ShellBrowserUpdater.cs" />
+    <Compile Include="ShellDll\ShellFolderHelper.cs" />
+    <Compile Include="ShellDll\ShellHelper.cs" />
+    <Compile Include="ShellDll\ShellImageList.cs" />
+    <Compile Include="ShellDll\ShellItem.cs" />
+    <Compile Include="ShellDll\SpecialFolders.cs" />
+    <Compile Include="ThumbnailCreator.cs" />
     <Compile Include="UpLink.cs" />
     <Compile Include="Utility\ContextMenuHelper.cs" />
     <Compile Include="Utility\IoHelper.cs" />
